ispCP ω 1.0.0 Changelog
~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 _________________________________________________________________
/ @TODO:                                                          \
|         - AWStats:                                              |
|               * gui: disable stats-alias in client menu         |
\_________________________________________________________________/

2007-08-16 Raphael Geissert
    - GUI:
        * Improved language files installer
    - CONFIGS:
        * Improved languages table structure
	- LANGUAGES
		* Updated fr_FR.po (thanks to Vianney)
    - ENGINE:
        * Added workaround for #289
        * Fixed #574: Invalid Command "CBandUser" at Apache start up

2007-08-16 Raphael Geissert
    - GUI:
        * Updated error icons
    - ENGINE:
        * Fixed #569: error pages are not owned to the right user and group
        * Added 503 error page
        * Fixed #570: mod_cband scoreboards are not deleted when user account is deleted
    - SETUP:
        * Added check for Net::LibIDN
        * Fixed #568: Incorrect SQL Query in Setup
    - CONFIGS:
        * Added 503 error page
    - DOCS:
        * Added Debian Lenny/Sid information

2007-08-15 Raphael Geissert
    - GUI:
        * Fixed #566: Undefined template variable: THEME_CHARSET in orderpanel
        * Removed virtual limits
    - ENGINE:
        * Partially fixed #476: /etc/ispcp/ispcp.conf is world readable
        * Applied patch from #387
        * Added mod_cband support
    - CONFIGS:
        * Fixed #563: old config backups should be removed
        * Added mod_cband support

2007-08-13 Raphael Geissert
    - GUI:
        * Fixed #561: Undefined variable: cfg in gui/include/i18n.php on line 33
        * Fixed #546: Blank page when trying to edit a domain alias (client)
        * Fixed #547: encoded email from reseller doesnt work
    - CONFIGS:
        * Fixed #451: missing do in logrotate/ispcp

2007-08-12 Raphael Geissert
    - GUI: